--- a/PhoenixVisualizer.App/PhoenixVisualizer.csproj
+++ b/PhoenixVisualizer.App/PhoenixVisualizer.csproj
@@ -65,7 +65,7 @@
     <!-- Bind ReactiveUI to Avalonia dispatcher -->
     <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.5" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1" />
-    <PackageReference Include="AvaloniaEdit" Version="0.10.12" />
+    <ProjectReference Include="..\AvaloniaEdit\src\AvaloniaEdit\AvaloniaEdit.csproj" />
     <PackageReference Include="ReactiveUI" Version="19.5.41" />
     <PackageReference Include="ReactiveUI.Fody" Version="19.5.41" />
     <!-- Roslyn for plugin compilation -->
