Cleanup: Organize documentation and fix .gitignore
📁 Documentation Organization:
- Moved all development reports to /docs/development-reports/
- Moved user guides to /docs/active/
- Moved historical docs to /docs/archive/
- Created comprehensive docs/README.md with organization rules

🔧 .gitignore Updates:
- Added Diffs/ folder to gitignore (entire folder ignored)
- Added docs/development-reports/ to gitignore
- Cleaned up root directory - only README.md remains

📋 Result:
- Clean root directory with just essential files
- Organized documentation structure
- Proper gitignore for development files
- Clear documentation organization rules

✅ Status: Ready for next development phase

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@ obj/
 *.user
 *.suo
 *.cache
+phoenix_visualizer_source_export_2025-09-03.txt
+
+# Development diffs - entire folder ignored
+Diffs/
+
+# Documentation reports (moved to docs/development-reports/)
+docs/development-reports/
